--- a/angular.json
+++ b/angular.json
@@ -107,5 +107,8 @@
       }
     }
   },
-  "defaultProject": "ngrx-store"
+  "defaultProject": "ngrx-store",
+  "cli": {
+    "analytics": false
+  }
 }
