--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@angular/animations": "~13.2.0",
     "@angular/cdk": "^13.3.9",
+    "@angular/cli": "^13.2.0",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
