--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ngrx/effects": "^14.3.2",
     "@ngrx/store": "^14.3.2",
     "@ngrx/store-devtools": "^14.3.2",
+    "@ngx-formly/core": "^6.0.2",
+    "@ngx-formly/material": "^6.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
