--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,6 @@
   "tabWidth": 2,
   "singleQuote": true,
   "printWidth": 80,
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "semi": true
 }
