--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.2.0",
     "moment": "^2.29.4",
     "ngp-image-picker": "^2.3.4",
+    "ngrx-forms": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
