changed some mistakes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,10 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "cSpell.words": [
-    "продукты"
+    "Casko",
+    "Osago",
+    "продукты",
+    "Совкомбанк",
+    "Телематический"
   ]
 }
